# ternary-streaming

./: AGENT.md  Cargo.toml  README.md
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/: lib.rs
